call-now-background

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
       <!-- My failures Section Start -->
       <section class="my-failure">
-        <img src="./assets/" alt="A women image" />
+        <img src="./assets/person.png" alt="A women image" />
         <div>
           <h2 class="section-title">My failures of previous year</h2>
           <p class="section-description">
