--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/22e950d32a.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./css/style.css" />
     <title>Future</title>
   </head>
@@ -11,11 +15,11 @@
     <!-- Header Section Start -->
     <header>
       <div class="banner-container">
-        <h1>All Thinks Are Possible If You believe</h1>
+        <h1 class="banner-title">All Thinks Are Possible If You believe</h1>
         <p class="section-description">
           There are many variations of passages of Lorem Ipsum available, but
           the majority have suffered alteration in some form, by injected
-          humour, or randomised words
+          humour, or randomized words
         </p>
         <button class="btn-primary">Contact Us</button>
       </div>
@@ -33,11 +37,24 @@
             making it over 2000 years old. Richard McClintock.
           </p>
           <div class="section-description">
-            <li>Contrary to popular belief, is not simply.</li>
-            <li>Contrary to popular belief.</li>
-            <li>Contrary to popular , is not simply.</li>
-            <li>Contrary to popular belief, is not simply.</li>
-            <li>Contrary to popular simply.</li>
+            <li>
+              <i class="fa-solid fa-check"></i> Contrary to popular belief, is
+              not simply.
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i> Contrary to popular belief.
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i> Contrary to popular , is not
+              simply.
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i> Contrary to popular belief, is
+              not simply.
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i> Contrary to popular simply.
+            </li>
           </div>
         </div>
       </section>
@@ -73,7 +90,7 @@
 
       <!-- Call now Section Start -->
       <section class="call-now">
-        <h2 class="section-title">Always keep a positive mindset</h2>
+        <h2 class="section-title text-white">Always keep a positive mindset</h2>
         <button class="btn-secondary">Call Now</button>
       </section>
       <!-- Call now Section End -->
@@ -82,7 +99,7 @@
     <!-- Footer Section Start -->
     <footer>
       <div class="footer-left">
-        <h2 class="section-title">Future</h2>
+        <h2 class="section-title text-white">Future</h2>
         <p class="section-description">
           There are many variations of passages of Lorem Ipsum available, but
           the majority have suffered alteration in some form, by injected
@@ -96,10 +113,10 @@
           ><a href="#"><img src="./assets/icons/youtube.png" alt="" /></a>
         </div>
       </div>
-      <div class="foote-right">
-        <h6>Subscribe</h6>
-        <input type="text" placeholder="Enter your email" />
-        <button class="btn-secondary">Subscribe</button>
+      <div class="footer-right">
+        <h4>Subscribe</h4>
+        <input type="email" placeholder="Enter your email" />
+        <input class="btn-secondary" type="submit" value="Subscribe" />
       </div>
     </footer>
     <!-- Footer Section End -->
