message section added

--- a/index.html
+++ b/index.html
@@ -94,7 +94,25 @@
         <button class="btn-secondary">Call Now</button>
       </section>
       <!-- Call now Section End -->
+
+      <!-- Contact me Section start  -->
+      <section class="contact-me">
+        <h4 class="section-title">Message me</h4>
+        <form  action="#" method="post">
+          <input type="text" name="name" id="name " placeholder="Your name" />
+          <input type="email" name="name" id="name " placeholder="Your email" />
+          <textarea
+            name="message"
+            id="message"
+            cols="30"
+            rows="10"
+            placeholder="Send Your Message"
+          ></textarea>
+          <input class="btn-primary" type="submit" value="Send" />
+        </form>
+      </section>
     </main>
+    <!-- Contact me Section End  -->
 
     <!-- Footer Section Start -->
     <footer>
