--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <!-- Contact me Section start  -->
       <section class="contact-me">
         <h4 class="section-title">Message me</h4>
-        <form  action="#" method="post">
+        <form action="#" method="post">
           <input type="text" name="name" id="name " placeholder="Your name" />
           <input type="email" name="name" id="name " placeholder="Your email" />
           <textarea
@@ -108,7 +108,9 @@
             rows="10"
             placeholder="Send Your Message"
           ></textarea>
-          <input class="btn-primary" type="submit" value="Send" />
+          <button class="btn-primary">
+            <i class="fa-regular fa-paper-plane"></i> Send
+          </button>
         </form>
       </section>
     </main>
@@ -121,7 +123,7 @@
         <p class="section-description">
           There are many variations of passages of Lorem Ipsum available, but
           the majority have suffered alteration in some form, by injected
-          humour, or randomised words
+          humour, or randomized words
         </p>
         <p class="section-description">Email : info@gmail.com</p>
         <p class="section-description">Phone : 01500 00 00 00</p>
