--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="icon" type="image/png" href="./assets/logo.png" />
     <title>Future</title>
   </head>
   <body>
