--- a/index.html
+++ b/index.html
@@ -37,25 +37,27 @@
             It has roots in a piece of classical Latin literature from 45 BC,
             making it over 2000 years old. Richard McClintock.
           </p>
-          <div class="section-description">
-            <li>
-              <i class="fa-solid fa-check"></i> Contrary to popular belief, is
-              not simply.
-            </li>
-            <li>
-              <i class="fa-solid fa-check"></i> Contrary to popular belief.
-            </li>
-            <li>
-              <i class="fa-solid fa-check"></i> Contrary to popular , is not
-              simply.
-            </li>
-            <li>
-              <i class="fa-solid fa-check"></i> Contrary to popular belief, is
-              not simply.
-            </li>
-            <li>
-              <i class="fa-solid fa-check"></i> Contrary to popular simply.
-            </li>
+          <div>
+            <ul class="section-description">
+              <li>
+                <i class="fa-solid fa-check"></i> Contrary to popular belief, is
+                not simply.
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i> Contrary to popular belief.
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i> Contrary to popular , is not
+                simply.
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i> Contrary to popular belief, is
+                not simply.
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i> Contrary to popular simply.
+              </li>
+            </ul>
           </div>
         </div>
       </section>
