--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
         </div>
       </section>
       <!-- My failures Section End -->
-
       <!-- My Plans Section Start -->
       <section class="my-plan">
         <h2 class="section-title">My Plans</h2>
@@ -90,20 +89,23 @@
         </div>
       </section>
       <!-- My Plans Section End -->
-
       <!-- Call now Section Start -->
       <section class="call-now">
         <h2 class="section-title text-white">Always keep a positive mindset</h2>
         <button class="btn-secondary">Call Now</button>
       </section>
       <!-- Call now Section End -->
-
       <!-- Contact me Section start  -->
       <section class="contact-me">
         <h4 class="section-title">Message me</h4>
         <form action="#" method="post">
-          <input type="text" name="name" id="name " placeholder="Your name" />
-          <input type="email" name="name" id="name " placeholder="Your email" />
+          <input type="text" name="name" id="name" placeholder="Your name" />
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Your email"
+          />
           <textarea
             name="message"
             id="message"
@@ -118,7 +120,6 @@
       </section>
     </main>
     <!-- Contact me Section End  -->
-
     <!-- Footer Section Start -->
     <footer>
       <div class="footer-left">
@@ -131,9 +132,15 @@
         <p class="section-description">Email : info@gmail.com</p>
         <p class="section-description">Phone : 01500 00 00 00</p>
         <div>
-          <a href="#"><img src="./assets/icons/fb.png" alt="" /></a
-          ><a href="#"><img src="./assets/icons/twitter.png" alt="" /></a
-          ><a href="#"><img src="./assets/icons/youtube.png" alt="" /></a>
+          <a href="#">
+            <img src="./assets/icons/fb.png" alt="" />
+          </a>
+          <a href="#">
+            <img src="./assets/icons/twitter.png" alt="" />
+          </a>
+          <a href="#">
+            <img src="./assets/icons/youtube.png" alt="" />
+          </a>
         </div>
       </div>
       <div class="footer-right">
